# mqtt_c

./: CMakeLists.txt  LICENSE.txt  clientSock.c  main.c  make.sh
inc/: PubSubClient.h
output/: mqttClient_x86.map
src/: PubSubClient.c  PubSubClient.h
